@@ -1,0 +1,3 @@
+#!/bin/sh
+cd "$1/Contents/Frameworks/Sparkle.framework/Versions/A/Resources"
+rm -rf ca.lproj cs.lproj cy.lproj da.lproj de.lproj es.lproj fi.lproj fr.lproj he.lproj hu.lproj id.lproj is.lproj it.lproj ja.lproj ko.lproj nl.lproj no.lproj pl.lproj ru.lproj sk.lproj sv.lproj th.lproj tr.lproj zh_CN.lproj zh_TW.lproj
